force-app/main/default/objects/ChatThread__c/ChatThread__c.object-meta.xml
<CustomObject>
    <description>Chat thread for custom chat.</description>
    <label>Chat Thread</label>
    <pluralLabel>Chat Threads</pluralLabel>
    <sharingModel>Private</sharingModel>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
</CustomObject>