force-app/main/default/objects/ChatThread__c/fields/ExternalThreadId__c.field-meta.xml
<CustomField>
    <fullName>ExternalThreadId__c</fullName>
    <externalId>true</externalId>
    <label>External Thread Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>