force-app/main/default/objects/ChatThread__c/fields/RelatedObjectType__c.field-meta.xml
<CustomField>
    <fullName>RelatedObjectType__c</fullName>
    <label>Related Object Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>